spade-tests/src/snapshots/spade_tests__typeinference__reading_from_port_members_is_a_type_error.snap
---
source: spade-tests/src/typeinference.rs
---
mod std {mod ports { entity read_port<T>(t: &mut T) -> T __builtin__ }}

use std::ports::read_port;

struct A {
    x: bool,
    y: int<3>
}

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: &mut A) -> bool {
    let x = inst read_port(val.x);
    let y = inst read_port(val.y);
    takes_normal(x, y)
}


error: Field access on &mut A which is not a struct
   ┌─ testinput:13:28
   │
13 │     let x = inst read_port(val.x);
   │                            ^^^^^ Expected struct, found &mut A


